# old-voxel-renderer

./: CMakeLists.txt  README.md
include/: app.h  camera.h  shader.h  voxel.h
include/glad/: glad.h
include/snx/math/: constants.h  math.h  types.h
src/: app.c  camera.c  glad.c  math.c  shader.c  voxel.c
